memory_game offline accumulated updates

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "memory_game",
+  "name": "Memory Game",
   "icons": [
     {
       "src": "favicon.ico",
